Fix committee title alignment
Fix bugs introduced in 2ea6d06

--- a/css/committees.css
+++ b/css/committees.css
@@ -13,7 +13,7 @@ h1 {
 
 @media (min-width: 700px) {
     h1 {
-        text-align: center;
+        text-align: left;
     }
 
     .mugshot {
